--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="description" content="ChatGPT with Enterprise Data" />
+    <meta name="description" content="Selene ChatGPT with Enterprise Data" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>ChatGPT with Enterprise Data</title>
+    <title>Selene ChatGPT with Enterprise Data</title>
     <style>
       :root {
         --azc-primary: #06b;
@@ -39,7 +39,7 @@
     </style>
   </head>
   <body>
-    <nav>ChatGPT with Enterprise Data</nav>
+    <nav>Selene ChatGPT with Enterprise Data</nav>
     <azc-chat></azc-chat>
     <script type="module" src="/src/index.ts"></script>
   </body>
